# paulshaclaw

./: .gitignore  .paul-project.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  OM1  README.md  pyproject.toml
.github/: copilot-instructions.md
changelog.d/: 125-main-repo-migration.md  126-g3-systemd.md  240-copilot-local-vllm-launcher.md  260-cockpit-wrapped-minicom-summary.md  262-cockpit-three-layer.md  91-env-facade.md  bump-hippo-pin-dream-governance.md  hippo-v0-1-1-pin.md  operator-shell-python-resolution.md  pr-91-env-facade.md  stage8-footer-cc-statusline-sidecar.md
config/: agents-projects.sample.yaml  claude-gemma4-settings.json  copilot-local-vllm.env.tmpl  paulshaclaw-stage1.sample.json
docs/: review.md
paulshaclaw/: __init__.py  cli.py
scripts/: check_import_surface.py  claude-gemma4  claude-gemma4-proxy  copilot-local-vllm  cutover-to-cortex.sh  cutover-to-planes.sh  install-claude-gemma4  install-copilot-local-vllm  reap-codex-brokers.sh  service-bot.sh  service-cost.sh  service-dream.sh  service-manager.sh  start.sh  sync-ref.sh  test-stage0-tooling-foundation.sh  using-git-worktrees.sh
tests/: test_claude_gemma4_packaging.py  test_cockpit_branding.py  test_cockpit_cost_bar.py  test_cockpit_redesign.py  test_cockpit_sysmon.py  test_cockpit_three_layer.py  test_config_paths.py  test_control_client.py  test_control_contract.py  test_coordinator_broker_reaper.py  test_coordinator_cli_complete.py  test_coordinator_cli_flags.py  test_coordinator_cli_tick.py  test_coordinator_contract_command.py  test_coordinator_headless_completion.py  test_coordinator_hook_templates.py  test_coordinator_launcher.py  test_coordinator_manager.py  test_coordinator_manager_daemon.py  test_coordinator_registry_headless.py  test_coordinator_relay_hook.py  test_copilot_local_vllm_packaging.py  test_cortex_alignment.py  test_cortex_consumer_pin.py  test_deck_cli.py  test_deck_compile.py  test_deck_contract_alignment.py  test_deck_data.py  test_deck_schema.py  test_deck_verify.py  test_gemma4_bro_hooks.py  test_hippo_consumer_contract.py  test_ops_companion_security.py  (+35 more)
(+1039 files in other folders)
