[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paulshaclaw"
version = "0.1.0"
requires-python = ">=3.10"
description = "paulshaclaw agent workflow system"

[tool.setuptools.packages.find]
where = ["."]
include = ["paulshaclaw*"]

[tool.setuptools.package-data]
# cockpit 視覺設計系統樣式表需隨套件出貨（CSS_PATH 於 wheel 安裝時才找得到）
"paulshaclaw.cockpit" = ["*.tcss"]
