[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paulshaclaw"
version = "0.1.0"
requires-python = ">=3.10"
description = "paulshaclaw agent workflow system"
# #125 Phase 1：memory 子系統由 paulsha-hippo 提供——pin 不可變 commit SHA
# （tag 僅人讀標記；PyPI 上線後改 version pin + hash，見 hippo-consumer spec）
dependencies = [
    "paulsha-hippo @ git+https://github.com/hamanpaul/paulsha-hippo@5d8b65cf4f47ea5f9a53a6f6156e4e0cb2c46aa8",
]

[project.scripts]
psc = "paulshaclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paulshaclaw*"]

[tool.setuptools.package-data]
# cockpit 視覺設計系統樣式表需隨套件出貨（CSS_PATH 於 wheel 安裝時才找得到）
"paulshaclaw.cockpit" = ["*.tcss"]

[tool.pytest.ini_options]
pythonpath = ["."]
