[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paulshaclaw"
version = "0.1.0"
requires-python = ">=3.10"
description = "paulshaclaw agent workflow system"
# #125 Phase 1：memory 子系統由 paulsha-hippo 提供——pin 不可變 commit SHA
# （tag 僅人讀標記；PyPI 上線後改 version pin + hash，見 hippo-consumer spec）
dependencies = [
    # v0.1.0（tag 為人讀標記；pin 為對應不可變 SHA）
    "paulsha-hippo @ git+https://github.com/hamanpaul/paulsha-hippo@30ebbbd598ec1e43c8b663c12f4ff1cffde3fc79",
]

[project.scripts]
psc = "paulshaclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paulshaclaw*"]

[tool.setuptools.package-data]
# cockpit 視覺設計系統樣式表需隨套件出貨（CSS_PATH 於 wheel 安裝時才找得到）
"paulshaclaw.cockpit" = ["*.tcss"]

[tool.pytest.ini_options]
pythonpath = ["."]
